<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F005BE"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andres.aplication4.MainActivity4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#030303"
        android:gravity="center"
        android:text="@string/formulario"
        android:textColor="#FFFCFC"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/eUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contraseña"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/eContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rcontraseña"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/erContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correoE"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/eCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rmasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/masculino"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rfemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/femenino"
            android:textSize="20sp" />

    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="showDatePickerDialog"
        android:text="@string/fechaN"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugarN"
            android:textSize="18sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/lNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/futbolid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/futbol"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/natacionid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/natacion"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/videojid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/videoj"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/cineid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/cine"
            android:textSize="13sp" />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:textSize="11sp"
        android:textStyle="bold"
        android:onClick="onButtonclicked"
        />

    <TextView
        android:id="@+id/respuestaid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:textSize="22sp" />

</LinearLayout>
